[gd_scene load_steps=3 format=3 uid="uid://ddhmuwam3lrrg"]

[ext_resource type="Script" path="res://scripts/demo_level.gd" id="1_j08t0"]
[ext_resource type="PackedScene" uid="uid://c6fth4mtmu8c0" path="res://screens/settings_menu.tscn" id="2_1ps50"]

[node name="demo_level" type="Node2D"]
script = ExtResource("1_j08t0")

[node name="settingButton" type="Button" parent="."]
visible = false
offset_left = 993.0
offset_top = 20.0
offset_right = 1142.0
offset_bottom = 51.0
text = "[insert menu icon]"

[node name="settingPanel" type="Panel" parent="."]
offset_left = 1005.0
offset_top = 47.0
offset_right = 1136.0
offset_bottom = 271.0

[node name="SettingsMenu" parent="." instance=ExtResource("2_1ps50")]
offset_left = 1069.0
offset_top = 158.0
offset_right = 1069.0
offset_bottom = 158.0

[connection signal="pressed" from="settingButton" to="." method="_on_setting_button_pressed"]
